CHANGES-1.3.txt
---------------

CHANGES IN CUPS V1.3.7

	- The image filters did not work with some CMYK JPEG files
	  produced by Adobe applications (STR #2727)
	- The Mac OS X USB backend did not work with printers that
	  did not report a make or model.
	- The job-sheets option was not encoded properly (STR #2715)
	- The scheduler incorrectly complained about missing LSB
	  PPD directories.


CHANGES IN CUPS V1.3.6

	- Documentation updates (STR #2646, STR #2647, STR #2649)
	- Fixed a problem with the web interface "Use Kerberos
	  Authentication" check box (STR #2703)
	- The scheduler unconditionally overwrote the printer-state-
	  message with "process-name failed" when a filter or backend
	  failed, preventing a useful error message from being shown
	  to the user.
	- Policies on CUPS-Move-Job didn't work as expected (STR
	  #2699)
	- The configure script only supported D-BUS on Linux
	  (STR #2702)
	- The scheduler did not support </LimitExcept> (STR #2701)
	- The scheduler did not reset the job-hold-until attribute
	  after a job's hold time was reached.
	- The scheduler did not support printer supply attributes
	  (STR #1307)
	- The Kerberos credentials provided by some Windows KDCs
	  were still too large - now use a dynamic buffer to
	  support credentials up to 64k in size (STR #2695)
	- Printing a test page from the web interface incorrectly
	  defaulted to the "guest" user (STR #2688)
	- The cupsEncodeOptions2() function did not parse multiple-
	  value attribute values properly (STR #2690)
	- The scheduler incorrectly sent printer-stopped events for
	  status updates from the print filters (STR #2680)
	- The IPP backend could crash when handling printer errors
	  (STR #2667)
	- Multi-file jobs did not print to remote CUPS servers
	  (STR #2673)
	- The scheduler did not provide the Apple language ID to
	  job filters.
	- Kerberos authentication did not work with the web
	  interface (STR #2606, STR #2669)